added model and routes tests

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "## A follow along practice for teaching TDD",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon app.js",
     "test": "mocha *.test.js"
   },
   "repository": {
