--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon app.js",
-    "test": "mocha *.test.js"
+    "test": "mocha *.test.js -R nyan --exit"
   },
   "repository": {
     "type": "git",
